--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MDBSpotlight",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Multilingual DBpedia Spotlight for Named Entity Recognition",
   "main": "index.js",
   "scripts": {
@@ -19,12 +19,7 @@
     "Text"
   ],
   "author": "Ali Khalili <hyperir@gmail.com> (http://ali1k.com/)",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/brentertz/scapegoat/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/ali1k/MDBSpotlight/issues"
   },
