package information is added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MDBSpotlight",
+  "name": "multi-db-spotlight",
   "version": "0.5.1",
   "description": "Multilingual DBpedia Spotlight for Named Entity Recognition",
   "main": "index.js",
