--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   },
   "homepage": "https://github.com/dbpedia-spotlight/DBpediaSpotlight.js",
   "dependencies": {
-    "languagedetect": "~1.1.1"
+    "languagedetect": "~1.1.1",
+    "superagent": "~1.8.0"
   },
   "devDependencies": {
     "chai": "^1.9.2",
     "mocha": "^1.21.4"
   },
   "scripts": {
-  "test": "make test"
+    "test": "make test"
   }
 }
