--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   },
   "homepage": "https://github.com/dbpedia-spotlight/DBpediaSpotlight.js",
   "dependencies": {
-    "languagedetect": "~1.1.1"
+    "languagedetect": "^1.1.1"
   },
   "devDependencies": {
-    "chai": "^1.9.2",
+    "chai": "^1.10.0",
     "mocha": "^1.21.4"
   },
   "scripts": {
-  "test": "make test"
+    "test": "make test"
   }
 }
