--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "superagent": "~1.8.0"
   },
   "devDependencies": {
-    "chai": "^4.1.1",
-    "mocha": "^3.5.0"
+    "tape": "^4.8.0"
   },
   "scripts": {
     "test": "node test/index.js"
